More colour contrast fixes

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -8,7 +8,7 @@ $base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
 $base-line-height: 1.5 !default;
 
-$green-color: #3f6c22;
+$green-color: #2e481d;
 
 $spacing-unit:     30px !default;
 
